// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeaderSection Component Snapshots matches snapshot for unverified user 1`] = `
<RCTView
  ref={null}
  style={
    {
      "paddingBottom": 24,
      "paddingTop": 0,
      "position": "relative",
    }
  }
>
  <View
    data-colors="["#F59E0B","#EC4899"]"
    data-end="{"x":1,"y":1}"
    data-start="{"x":0,"y":0}"
    ref={null}
    style={
      {
        "borderBottomLeftRadius": 32,
        "borderBottomRightRadius": 32,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="linear-gradient"
  />
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "width": 36,
        }
      }
    />
  </RCTView>
  <RCTPressable
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "height": 120,
          "justifyContent": "center",
          "position": "relative",
          "width": 120,
        }
      }
    >
      <RCTView
        height={120}
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        width={120}
      >
        <RCTView
          cx={60}
          cy={60}
          fill="transparent"
          r={58}
          ref={null}
          stroke="rgba(255,255,255,0.2)"
          strokeWidth={4}
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <RCTView
          height={120}
          ref={null}
          width={120}
        >
          <RCTView
            ref={null}
          >
            <RCTView
              id="trustGradient"
              ref={null}
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            >
              <RCTView
                offset="0%"
                ref={null}
                stopColor="#FBBF24"
              />
              <RCTView
                offset="100%"
                ref={null}
                stopColor="#F59E0B"
              />
            </RCTView>
          </RCTView>
          <RCTView
            cx={60}
            cy={60}
            fill="transparent"
            r={58}
            ref={null}
            stroke="url(#trustGradient)"
            strokeDasharray={364.424747816416}
            strokeDashoffset={145.7698991265664}
            strokeLinecap="round"
            strokeWidth={4}
            transform="rotate(-90 60 60)"
          />
        </RCTView>
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 100,
            "height": 104,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "width": 104,
          }
        }
      >
        <RCTImage
          ref={null}
          source="avatar.jpg"
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
          testID="profile-avatar"
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FBBF24",
            "borderColor": "#FFFFFF",
            "borderRadius": 16,
            "borderWidth": 3,
            "bottom": 4,
            "height": 32,
            "justifyContent": "center",
            "position": "absolute",
            "right": 4,
            "width": 32,
          }
        }
      >
        <RCTText
          ref={null}
          style={
            {
              "accessibilityRole": "text",
              "color": "#FFFFFF",
              "fontSize": 11,
              "fontWeight": "700",
              "letterSpacing": 0.3,
              "lineHeight": 19.5,
              "minContrastRatio": 4.5,
            }
          }
          testID="RCTText"
        >
          60
        </RCTText>
      </RCTView>
    </RCTView>
  </RCTPressable>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "accessibilityRole": "header",
            "color": "#FFFFFF",
            "fontSize": 32,
            "fontWeight": "800",
            "letterSpacing": -0.5,
            "lineHeight": 40,
            "minContrastRatio": 7,
          }
        }
        testID="RCTText"
      >
        Test User
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <RCTText
        color="rgba(255,255,255,0.8)"
        name="map-marker-outline"
        ref={null}
        size={16}
        testID="RCTText"
      >
        map-marker-outline
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "accessibilityRole": "text",
            "color": "rgba(255,255,255,0.8)",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 26.25,
            "minContrastRatio": 4.5,
          }
        }
        testID="RCTText"
      >
        Test City
      </RCTText>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "marginTop": 24,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "#FFFFFF",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 20,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "rgba(255,255,255,0.7)",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 21,
                "marginTop": 2,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            trust.stats.moments
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "#FFFFFF",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 20,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "rgba(255,255,255,0.7)",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 21,
                "marginTop": 2,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            trust.stats.gifts
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "#FFFFFF",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 20,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            0%
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "rgba(255,255,255,0.7)",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 21,
                "marginTop": 2,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            trust.stats.response
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "position": "absolute",
        "right": 20,
        "top": 80,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTPressable
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      role="button"
      style={
        {
          "borderRadius": 22,
          "elevation": 4,
          "height": 44,
          "overflow": "hidden",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 8,
          "width": 44,
        }
      }
      testID="edit-button"
    >
      <RCTView
        data-intensity={30}
        data-tint="light"
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,0.2)",
            "borderColor": "rgba(255,255,255,0.3)",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
          }
        }
        testID="blur-view"
      >
        <RCTText
          color="#FFFFFF"
          name="pencil-outline"
          ref={null}
          size={20}
          testID="RCTText"
        >
          pencil-outline
        </RCTText>
      </RCTView>
    </RCTPressable>
  </RCTView>
</RCTView>
`;

exports[`ProfileHeaderSection Component Snapshots matches snapshot for verified user 1`] = `
<RCTView
  ref={null}
  style={
    {
      "paddingBottom": 24,
      "paddingTop": 0,
      "position": "relative",
    }
  }
>
  <View
    data-colors="["#F59E0B","#EC4899"]"
    data-end="{"x":1,"y":1}"
    data-start="{"x":0,"y":0}"
    ref={null}
    style={
      {
        "borderBottomLeftRadius": 32,
        "borderBottomRightRadius": 32,
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="linear-gradient"
  />
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "paddingTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "width": 36,
        }
      }
    />
  </RCTView>
  <RCTPressable
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 8,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "height": 120,
          "justifyContent": "center",
          "position": "relative",
          "width": 120,
        }
      }
    >
      <RCTView
        height={120}
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        width={120}
      >
        <RCTView
          cx={60}
          cy={60}
          fill="transparent"
          r={58}
          ref={null}
          stroke="rgba(255,255,255,0.2)"
          strokeWidth={4}
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          }
        }
      >
        <RCTView
          height={120}
          ref={null}
          width={120}
        >
          <RCTView
            ref={null}
          >
            <RCTView
              id="trustGradient"
              ref={null}
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            >
              <RCTView
                offset="0%"
                ref={null}
                stopColor="#E5E4E2"
              />
              <RCTView
                offset="100%"
                ref={null}
                stopColor="#FFD700"
              />
            </RCTView>
          </RCTView>
          <RCTView
            cx={60}
            cy={60}
            fill="transparent"
            r={58}
            ref={null}
            stroke="url(#trustGradient)"
            strokeDasharray={364.424747816416}
            strokeDashoffset={36.44247478164159}
            strokeLinecap="round"
            strokeWidth={4}
            transform="rotate(-90 60 60)"
          />
        </RCTView>
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 100,
            "height": 104,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "absolute",
            "width": 104,
          }
        }
      >
        <RCTImage
          ref={null}
          source="avatar.jpg"
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
          testID="profile-avatar"
        />
      </RCTView>
      <RCTView
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E5E4E2",
            "borderColor": "#FFFFFF",
            "borderRadius": 16,
            "borderWidth": 3,
            "bottom": 4,
            "height": 32,
            "justifyContent": "center",
            "position": "absolute",
            "right": 4,
            "width": 32,
          }
        }
      >
        <RCTText
          ref={null}
          style={
            {
              "accessibilityRole": "text",
              "color": "#FFFFFF",
              "fontSize": 11,
              "fontWeight": "700",
              "letterSpacing": 0.3,
              "lineHeight": 19.5,
              "minContrastRatio": 4.5,
            }
          }
          testID="RCTText"
        >
          90
        </RCTText>
      </RCTView>
    </RCTView>
  </RCTPressable>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "marginTop": 16,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 6,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          {
            "accessibilityRole": "header",
            "color": "#FFFFFF",
            "fontSize": 32,
            "fontWeight": "800",
            "letterSpacing": -0.5,
            "lineHeight": 40,
            "minContrastRatio": 7,
          }
        }
        testID="RCTText"
      >
        Test User
      </RCTText>
      <RCTText
        color="#10B981"
        name="check-decagram"
        ref={null}
        size={22}
        testID="RCTText"
      >
        check-decagram
      </RCTText>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <RCTText
        color="rgba(255,255,255,0.8)"
        name="map-marker-outline"
        ref={null}
        size={16}
        testID="RCTText"
      >
        map-marker-outline
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "accessibilityRole": "text",
            "color": "rgba(255,255,255,0.8)",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 26.25,
            "minContrastRatio": 4.5,
          }
        }
        testID="RCTText"
      >
        Test City
      </RCTText>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "marginTop": 24,
        "paddingHorizontal": 20,
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "#FFFFFF",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 20,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "rgba(255,255,255,0.7)",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 21,
                "marginTop": 2,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            trust.stats.moments
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "#FFFFFF",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 20,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            0
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "rgba(255,255,255,0.7)",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 21,
                "marginTop": 2,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            trust.stats.gifts
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
    <RCTView
      ref={null}
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateY": 20,
            },
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <RCTPressable
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        onPressIn={[Function]}
        onPressOut={[Function]}
        ref={null}
        style={
          {
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTView
          data-intensity={20}
          data-tint="light"
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.15)",
              "borderColor": "rgba(255,255,255,0.2)",
              "borderRadius": 16,
              "borderWidth": 1,
              "minWidth": 90,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            }
          }
          testID="blur-view"
        >
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "#FFFFFF",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 20,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            0%
          </RCTText>
          <RCTText
            ref={null}
            style={
              {
                "accessibilityRole": "text",
                "color": "rgba(255,255,255,0.7)",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 21,
                "marginTop": 2,
                "minContrastRatio": 4.5,
              }
            }
            testID="RCTText"
          >
            trust.stats.response
          </RCTText>
        </RCTView>
      </RCTPressable>
    </RCTView>
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "position": "absolute",
        "right": 20,
        "top": 80,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTPressable
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      role="button"
      style={
        {
          "borderRadius": 22,
          "elevation": 4,
          "height": 44,
          "overflow": "hidden",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 8,
          "width": 44,
        }
      }
      testID="edit-button"
    >
      <RCTView
        data-intensity={30}
        data-tint="light"
        ref={null}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,0.2)",
            "borderColor": "rgba(255,255,255,0.3)",
            "borderWidth": 1,
            "flex": 1,
            "justifyContent": "center",
          }
        }
        testID="blur-view"
      >
        <RCTText
          color="#FFFFFF"
          name="pencil-outline"
          ref={null}
          size={20}
          testID="RCTText"
        >
          pencil-outline
        </RCTText>
      </RCTView>
    </RCTPressable>
  </RCTView>
</RCTView>
`;
